Updated the photo_display.cfm to remove old CD dialog code.

--- a/release_notes.txt
+++ b/release_notes.txt
@@ -31,3 +31,4 @@ v1.1
   - Updated the photoUploadService.cfc to remove old CD dialog code.
   - Updated the "/datasheet-modules/photo-update-edit-form-data.cfm". Removed IF block 
   		and added FORM ID variable from the App cfc.
+  - Updated the photo_display.cfm to remove old CD dialog code.
