--- a/release_notes.txt
+++ b/release_notes.txt
@@ -44,3 +44,12 @@ v1.1
   - Updated photoDAO.imgGalleryUpload function to make photo in image gallery public.
   - Updated photoForms component to process all photo add/edit through form function.
   - Updated AppBeanConfig for the ADF V1.5.
+  - Removed ADD_URL and UPLOAD_PATH fields in the configuration element.  The ADD_URL field
+  		has been replaced by the photoForms updates.  UPLOAD_PATH is loaded in from 
+  		the App.getAppConfig.
+  - Updated Photo Chooser custom field for the updates to the General Chooser in ADF V1.5.
+  - Updated the Photo Category and Size directory field to the new 'photo_directory' custom
+  		field type.  This field builds the directory name.  Renamed the field definitions to
+  		label the directory field as "Reference Name".  Changed the Photo Category title field
+  		to 'custom text field'.  Changed the Photo Size title field to 'custom text field'.
+  - Updated all the lightbox framework "ResizeWindow" to "lbResizeWindow".
