--- a/release_notes.txt
+++ b/release_notes.txt
@@ -63,3 +63,4 @@ v1.1
   - Added default category selecting when adding from photo chooser with the default category
   		set in the properties.
   - Updated the error handling for the photo upload for better debugging.
+  - Updated Category Display Render datasheet module to set sort value to the column render.
